test/error/macro_unapplied_eof.sv
// pattern: unexpected end of input
`define MACRO(a)
`MACRO
